add: working in frontend from generation page

--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "@angular/ssr": "^20.1.5",
     "@ng-icons/core": "^29.10.0",
     "@ng-icons/lucide": ">=29.0.0",
+    "@ngrx/effects": "^20.0.1",
+    "@ngrx/entity": "^20.0.1",
+    "@ngrx/store": "^20.0.1",
+    "@ngrx/store-devtools": "^20.0.1",
     "@spartan-ng/brain": "^0.0.1-alpha.496",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
